--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     },
     "dependencies": {
         "@asasugar-use/vue3-typewriter": "^0.0.4",
+        "@fortawesome/free-brands-svg-icons": "^7.0.1",
+        "@fortawesome/free-solid-svg-icons": "^7.0.1",
+        "@fortawesome/vue-fontawesome": "^3.1.2",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.1.0",
