--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^2.1.10",
+        "@vue-leaflet/vue-leaflet": "^0.10.1",
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.1",
+        "leaflet": "^1.9.4",
         "lucide-vue-next": "^0.468.0",
         "nprogress": "^0.2.0",
         "reka-ui": "^2.4.1",
