--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "lucide-vue-next": "^0.468.0",
         "nprogress": "^0.2.0",
         "reka-ui": "^2.4.1",
+        "swiper": "^12.0.2",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
