--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@inertiajs/vue3": "^2.1.10",
         "@vue-leaflet/vue-leaflet": "^0.10.1",
         "@vueuse/core": "^12.8.2",
+        "axios": "^1.12.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "laravel-vite-plugin": "^2.0.1",
