--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.23.0",
         "vite": "^7.0.4",
+        "vite-svg-loader": "^5.1.0",
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
