--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@vue-leaflet/vue-leaflet": "^0.10.1",
         "@vueuse/core": "^12.8.2",
         "axios": "^1.12.2",
+        "chart.js": "^4.5.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.18",
@@ -57,6 +58,7 @@
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "vue": "^3.5.21",
+        "vue-chartjs": "^5.3.2",
         "vue-typer": "^1.2.0",
         "vue3-typer": "^1.0.0",
         "ziggy-js": "^2.6.0"
