--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@vueuse/core": "^12.8.2",
         "axios": "^1.12.2",
         "chart.js": "^4.5.0",
+        "chartjs-plugin-datalabels": "^2.2.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "dayjs": "^1.11.18",
